# la-election-results

./: .gitignore  mkdocs.yml  pyproject.toml
.dbt/: .user.yml  profiles.yml
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/workflows/: post-create.yaml
.trunk/: trunk.yaml
data/ElectionDates/: election_dates.json
data/RacesCandidates_Multiparish/: 19820911.json  19821102.json  19831022.json  19831119.json  19840929.json  19850330.json  19860118.json  19860201.json  19860405.json  19860503.json  19860719.json  19860927.json  19861104.json  19870307.json  19870404.json  19871024.json  19871121.json  19880308.json  19880416.json  19880604.json  19881001.json  19881108.json  19890121.json  19890218.json  19890401.json  19890429.json  19891007.json  19891118.json  19900120.json  19900203.json  19900303.json  19900310.json  19900407.json  19900505.json  19901006.json  19901106.json  19901208.json  19910223.json  19910323.json  19910420.json  (+262 more)
data/VotesRaceByParish/: 20230325_63271.json  20230325_63455.json  20230325_63462.json  20230325_63473.json  20230325_64495.json  20230429_12674.json  20230429_12675.json  20230429_12676.json  20230429_12677.json  20230429_12678.json  20230429_12679.json  20230429_64521.json  20230429_64524.json  20230429_64525.json  20231014_12719.json  20231014_12771.json  20231014_12772.json  20231014_12773.json  20231014_12774.json  20231014_63500.json  20231014_63501.json  20231014_63502.json  20231014_63503.json  20231014_63504.json  (+91 more)
docs/: api.md  census_codebook.md  index.md
scripts/: cli.py  foo.py  scraper.py
(+7620 files in other folders)
